# analise_ativos

./: Makefile  README.md  main.py  pwd.db  pyproject.toml
data-raw/: BBAS_3T24.xlsx  BPAC_3T24.xlsx
src/analise_ativos/: modulo1.py
src/controller/: cliente.py  dml.py  user.py
src/data/: controle.db
src/page/: delete.py  insert.py  select.py
src/services/: database.py
tests/: test_import.py  test_model.py
