[tool.poetry]
name = "analise-ativos"
version = "0.1.0"
description = "Projeto para analise de ativos"
authors = ["Max Lemes <maxvlemes@gmail.com>"]
license = "MIT"
readme = "README.md"

# Configuração de pacotes
# Configuração para o Poetry identificar a pasta src
packages = [
    {include = "meu_projeto", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
